# parth.ai

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app_streamlit.py  app_telegram.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  run_streamlit.sh  status_check.py  telegram_client.py  test_agents.py  worker.py
ai/: __init__.py  agent_manager.py  llm_tools.py  proactive_agent.py  reactive_agent.py
alembic/: env.py
alembic/versions/: 81ced29d2831_initial_migration.py  b12bb42c53a0_add_messages.py  bccad34fbe5f_add_fulltext_search_to_skills.py
models/: __init__.py  models.py
prompts/: __init__.py  agents.py  proactive_agent_prompt.py  skills.md
services/: __init__.py  services.py
tasks/: __init__.py  scheduled_messages.py
tools/: llm_tools.py
