[project]
name = "parth-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.3",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "sqlalchemy==2.0.46",
    "openai-agents==0.6.9",
    "asyncpg==0.29.0",
    "greenlet==3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "models", "services", "prompts"]

